Fix layout breakage on small screens

--- a/src/assets/css/librarybrowser.css
+++ b/src/assets/css/librarybrowser.css
@@ -1060,7 +1060,7 @@ div:not(.sectionTitleContainer-cards) > .sectionTitle-cards {
     }
 
     .detailPageContent {
-        width: 69.8%;
+        width: 69.5%;
         float: right;
     }
 }
